--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "be.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node be.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
